--- a/index.html
+++ b/index.html
@@ -10,10 +10,32 @@
 <body>
     <div class="container">
        <div class="clearfix">
-           <header></header>
-           <div class="main-section"></div>
+
+<!-- Sezione header e navbar -->
+
+           <header>
+               <img id="logo" src="img/logo.png" alt="">
+               <nav>
+                   <ul>
+                    <li><a href="#">FEATURES</a></li>
+                    <li><a href="#">EDITORIALS</a></li>
+                    <li><a href="#">ENVIROMENT</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">SHOP</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                   </ul>
+               </nav>
+           </header>
+
+<!-- Sezione spotlight -->
+
+           <div class="main-section border-curve bg-main-sec">
+               <div class="bg-opacity border-curve white-text">
+                    <h3>Pretium ac placerat dui interdum nunc in eros urna morbi</h3>
+                </div>
+           </div>
            
-           <!-- Seconda Sezione -->
+           <!-- Sezione Leadership  -->
 
            <main>
                <div class="header-main"></div>
