add spotlight section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 
            <div class="main-section border-curve bg-main-sec">
                <div class="bg-opacity border-curve white-text">
-                    <h3>Pretium ac placerat dui interdum nunc in eros urna morbi</h3>
+                   <section class="info-main">
+                    <h2>Pretium ac placerat dui interdum nunc in eros urna morbi</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Cupiditate, harum fugiat. Nemo molestiae, 
+                        natus...</p>
+                    </section>  
                 </div>
            </div>
            
