add main section

--- a/index.html
+++ b/index.html
@@ -43,10 +43,21 @@
            <!-- Sezione Leadership  -->
 
            <main>
-               <div class="header-main"></div>
-               <div class="sidebar-main"></div>
+               <div class="header-main">
+                   <h1>Leadership</h1>
+                   <p class="grey-text">Fertenum urna a libero tempus</p>
+               </div>
+
+               <!-- Sidebar sinistra -->
+               <div class="sidebar-main">
+                    <div class="side-photo photo-left border-curve"></div>
+               </div>
                <div class="box-main"></div>
-               <div class="sidebar-main"></div>
+
+               <!-- Sidebar destra -->
+               <div class="sidebar-main">
+                <div class="side-photo photo-right border-curve"></div>
+               </div>
             </main>
         </div> 
         <footer></footer>
