fix images spotlight

--- a/index.html
+++ b/index.html
@@ -50,13 +50,21 @@
 
                <!-- Sidebar sinistra -->
                <div class="sidebar-main">
-                    <div class="side-photo photo-left border-curve"></div>
+                    <div class="side-photo photo-left border-curve">
+                        <div class="bg-opacity-small border-curve"></div>
+                    </div>
                </div>
-               <div class="box-main"></div>
+               <div class="box-main">
+                   <div class="center-photo border-curve">
+                       <div class="bg-opacity-small border-curve"></div>
+                   </div>
+               </div>
 
                <!-- Sidebar destra -->
                <div class="sidebar-main">
-                <div class="side-photo photo-right border-curve"></div>
+                <div class="side-photo photo-right border-curve">
+                    <div class="bg-opacity-small border-curve"></div>
+                </div>
                </div>
             </main>
         </div> 
