leadership section done

--- a/index.html
+++ b/index.html
@@ -53,11 +53,31 @@
                     <div class="side-photo photo-left border-curve">
                         <div class="bg-opacity-small border-curve"></div>
                     </div>
+                    <p>Lorem</p>
+                    <p class="grey-text margin-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Cum, praesentium necessitatibus? Soluta maxime nam, 
+                        corrupti quas commodi dolore nobis officiis asperiores</p>
                </div>
                <div class="box-main">
                    <div class="center-photo border-curve">
                        <div class="bg-opacity-small border-curve"></div>
                    </div>
+                   <p>Ipsum</p>
+                   <p class="grey-text margin-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                       Placeat quia autem soluta unde adipisci rerum odio maxime eveniet, 
+                       ipsa incidunt harum debitis ad, dicta eum numquam dolor, rem error eos!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Nostrum libero hic corrupti id neque, 
+                     quis aliquid deserunt ea optio modi quos officia, 
+                    sed rem, cum alias eius odit adipisci quae?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Quod sunt beatae sed aliquam dicta recusandae eum, 
+                     nesciunt laboriosam incidunt, odit, 
+                     neque ratione rem pariatur alias deserunt rerum? Odio, obcaecati molestias?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Placeat quia autem soluta unde adipisci rerum odio maxime eveniet,
+                    quis aliquid deserunt ea optio modi quos officia, 
+                    sed rem, cum alias eius odit adipisci quae</p>
                </div>
 
                <!-- Sidebar destra -->
@@ -65,6 +85,10 @@
                 <div class="side-photo photo-right border-curve">
                     <div class="bg-opacity-small border-curve"></div>
                 </div>
+                <p>Lorem</p>
+                    <p class="grey-text margin-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Cum, praesentium necessitatibus? Soluta maxime nam, 
+                        corrupti quas commodi dolore nobis officiis asperiores</p>
                </div>
             </main>
         </div> 
