--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/174/174881.png">
     <link rel="stylesheet" href="css/style.css">
     <title>Wordpress Site</title>
 </head>
@@ -49,6 +50,7 @@
                </div>
 
                <!-- Sidebar sinistra -->
+
                <div class="sidebar-main">
                     <div class="side-photo photo-left border-curve">
                         <div class="bg-opacity-small border-curve"></div>
@@ -81,6 +83,7 @@
                </div>
 
                <!-- Sidebar destra -->
+
                <div class="sidebar-main">
                 <div class="side-photo photo-right border-curve">
                     <div class="bg-opacity-small border-curve"></div>
@@ -92,7 +95,9 @@
                </div>
             </main>
         </div> 
-        <footer></footer>
+        <footer>
+            <p>Designed with</p>
+        </footer>
     </div>
     
 </body>
