--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
            <div class="main-section border-curve bg-main-sec">
                <div class="bg-opacity border-curve white-text">
-                   <section class="info-main">
+                   <div class="info-main">
                     <h2>Pretium ac placerat dui interdum nunc in eros urna morbi</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Cupiditate, harum fugiat. Nemo molestiae, 
                         natus...</p>
-                    </section>  
+                    </div>  
                 </div>
            </div>
            
